<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical|center_horizontal"
    android:background="@drawable/gradient_green_box">
  
    <TextView
        android:id="@+id/tv_bt_status"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:maxLines="6"
        android:scrollbars="vertical"
        android:padding="8dp"
        
        android:gravity="start"
        android:textSize="17sp"
        android:textColor="#ffffff"
        android:text="@string/text_bt_status" />
      
  <ListView
        android:id="@+id/search_dev_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="8dp"
        android:layout_margin="5dp"
        android:stackFromBottom="false" />
    
    
    <Button
        android:id="@+id/make_visible_button"    
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/allow_visible" 
        android:onClick="EnsureVisible"/>
    <Button
        android:id="@+id/scan_button"    
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/scan_for_devices" 
        android:onClick="ScanForDevices"/>
   </LinearLayout>

