<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.onemanshow.singletic.MainTicViewActivity" >
<FrameLayout
    android:id="@+id/frameLayout1"
    android:layout_width="fill_parent"
    android:layout_height="50dp"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true" >
<RadioGroup
    android:id="@+id/radio"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="horizontal"
    android:color="#FFFFFFFF" >


      <RadioButton
          android:id="@+id/first"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:button="@drawable/button_radio"
          android:text="@string/level_easy"
          android:textColor="#FFCCFFFF"
          android:onClick="onRadioButtonClicked" />

      <RadioButton
          android:id="@+id/second"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:button="@drawable/button_radio"
          android:text="@string/level_medium"
          android:textColor="#FFCCFFFF"
          android:onClick="onRadioButtonClicked" />

      <RadioButton
          android:id="@+id/third"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:button="@drawable/button_radio"
          android:text="@string/level_hard"
          android:textColor="#FFCCFFFF"
          android:onClick="onRadioButtonClicked" />

</RadioGroup> 
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal"
    android:orientation="horizontal" >
    
<ImageView
    android:id="@+id/imageTurnCap"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:src="@drawable/turn" />
 
<ImageView
    android:id="@+id/imageCrossNull"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:src="@drawable/cross" />
		
  </LinearLayout>          
</FrameLayout>
<CheckBox
        android:id="@+id/checkBox1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dip"
        android:layout_width="96dip"
        android:layout_height="24dip"
        android:button="@drawable/checkbox_selector"
        android:onClick="onCheckboxClicked"
         />
 <com.onemanshow.singletic.CustomTicView
       
        android:id="@+id/TicView"
        android:layout_below="@+id/frameLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        custom:fillColor="#FFFFFF99"
        custom:borderColor="#FFCCCCFF"
        custom:gridColor="#FF000000" 
        custom:crossColor="#FF008000"
        custom:nullColor="#FF0066CC"
        custom:winColor="#FFFF0000"
         />
 <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="40dip"
    android:layout_centerHorizontal="true"
    android:layout_above="@+id/imageButton1"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/image_cross_wins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cross_wins" />

    <TextView
        android:id="@+id/cross_wins"
        android:layout_width="32dip"
        android:layout_height="40dip"
        android:gravity="center"
        android:text="0"
        android:textColor="#FF993300"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/image_null_wins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dip"
        android:src="@drawable/null_wins" />
    <TextView
        android:id="@+id/null_wins"
        android:layout_width="32dip"
        android:layout_height="40dip"
        android:gravity="center"
        android:text="0"
        android:textColor="#FF993300"
        android:textSize="24sp" />

</LinearLayout>
 
 <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onHelp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/hp" />
</RelativeLayout>
